client/style.css
#cast {
  --disconnected-color: #efefef;
  background-color: #888;
  border-radius: 10px;
  bottom: 5px;
	display: block;
	height: 40px;
  padding: 5px;
  position: absolute;
  right: 5px;
	width: 40px;
}

#cast:hover {
  cursor: pointer
}

